# cumulus-library-kidney-transplant

./: .gitignore  LS_donor.xml  LS_immunosuppressive_medications.xml  LS_outcomes.xml  README.md  RUNNING-AGREEMENT.md  RUNNING.md  manifest.toml  pyproject.toml
.github/: pull_request_template.md
cumulus-library-kidney-transplant/: casedef.py  prompt_ade.py  study_prefix.py
cumulus_library_kidney_transplant/: StudyBuilderConfig.json  __init__.py  casedef.py  casedef.toml  cohorts.py  counts.py  cube.toml  doc_ontology.py  drug_eras.py  fhir2sql.py  file_upload.toml  filetool.py  guard.py  loinc_names.py  manifest.py  manifest.toml  manifest_deprecated.toml  nlp_clinical_peri_tasks.toml  nlp_clinical_peri_tasks.workflow  nlp_clinical_peri_tasks_10.workflow  nlp_clinical_post_tasks.toml  nlp_clinical_post_tasks.workflow  nlp_clinical_post_tasks_10.workflow  nlp_clinical_tasks.toml  nlp_clinical_tasks_widen.toml  nlp_tasks.toml  nlp_tasks_10.toml  prompt_ade.py  sample.toml  schema.py  study_builder.py  study_meta.toml  study_population.py  study_population.toml  study_prefix.py  study_variable.toml  study_variable_wide.toml  vocab.py
docs/: RUNNING-AGREEMENT.md  RUNNING.md
irae/: VSAC.md  casedef.py  cohort.py  cohorts.py  common.py  counts.py  fhir2sql.py  filetool.py  guard.py  irae__rx_cohort_sample.sql  jaccard.py  manifest.py  manifest.toml  prompt_ade.py  resources.py  schema.py  study_builder.py  study_population.py  varaibles.py  vocab.py
kidney_transplant/: VSAC.md  common.py  fhir2sql.py  guard.py  manifest.toml  varaibles.py  vsac.py  vsac_opioid.py
label-studio-annotation-interfaces/: LS_donor.xml  LS_immunosuppressive_medications.xml  LS_multiple_transplant_history.xml  LS_outcomes.xml
renal-disease/: manifest.toml
resources/: casedef.csv
spreadsheet/: age_group.csv  casedef.csv  diag_kidney_biopsy.csv  doc_type_relevant.csv  dx_cancer_general.csv  dx_cancer_specific.csv  dx_ptld.csv  (+70 more)
(+1356 files in other folders)
